chore: initialize ruff and run lint and format

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,14 @@ dev = [
 
 [project.scripts]
 rag-app = "rag_app.main:main"
+
+[tool.ruff]
+line-length = 88
+target-version = "py310"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "B", "UP"]
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+testpaths = ["tests"]
